<resources>
    <string name="app_name">PayApp</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_email">Email(Optional)</string>
    <string name="prompt_password">Password</string>
    <string name="action_continue">Continue</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username, must be >5 chars</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Not a valid email</string>

    <string name="login_failed">"Login failed"</string>
    <string name="text_tnc"><![CDATA[By checking this you are greeting to noon pay Terms & Conditions]]></string>
    <string name="action_signin">Already have an acoount?SignIn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
